minggu update pagination dll

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -171,6 +171,13 @@ table{
 }
 
 
+.title-content{
+    background-color: #68baf9; width: 100%; padding: 10px 10px; margin: 10px 5px; color: #ffffff;
+}
+.title-content a{
+    color: #ffffff;
+}
+
 
 /*List*/
 .list-control{
