--- a/views/delivery.ejs
+++ b/views/delivery.ejs
@@ -29,15 +29,15 @@
 				</div>
 				<div class="list-control">
 					<div class="list-control-box">
-						<button class="option-click btn-list-control" href="#list-control-show">
+						<button class="option-click btn-list-control size-std" href="#list-control-show">
 							Show :&nbsp; 20 
 							<img src="<%= baseurl() %>images/icon/arrow-down.png" class="icon-list-control">
 						</button>
 						<div class="option-box option-menu shadow half box-list-control" id="list-control-show">
 							<ul class="full-length nopad">
-								<a href=""><li class="pad-tb">50</li></a>
-								<a href=""><li class="pad-tb">100</li></a>
-								<a href=""><li class="pad-tb">200</li></a>
+								<a href=""><li class="pad-tb size-std">50</li></a>
+								<a href=""><li class="pad-tb size-std">100</li></a>
+								<a href=""><li class="pad-tb size-std">200</li></a>
 							</ul>
 						</div>
 					</div>	
@@ -53,7 +53,7 @@
 									 <label for="selectall" id="chartd"><span></span></label>
 									</div>
 								</th>
-								<th style="text-align: left; padding: 10px; width: 100px;">Dealer</th>
+								<th style="text-align: left; padding: 8px; width: 100px;">Dealer</th>
 								<th style="text-align: left;">Nama Sales</th>
 								<th>Type</th>
 								<th>Tanggal Upload</th>
