--- a/public/css/component.css
+++ b/public/css/component.css
@@ -8,13 +8,13 @@
 
 
     @media screen and (max-width: 1600px){      
-    .size-std{font-size: 13px;}    
-    .size-cute{font-size: 11px}
-    .size-note{font-size: 8px}
-    .size-head1{font-size: 44px;}
-    .size-head2{font-size: 34px;}
-    .size-head3{font-size: 20px;}
-    .size-head4{font-size: 16px;}
+    .size-std{font-size: 9px;}    
+    .size-cute{font-size: 8px}
+    .size-note{font-size: 7px}
+    .size-head1{font-size: 32px;}
+    .size-head2{font-size: 26px;}
+    .size-head3{font-size: 16px;}
+    .size-head4{font-size: 13px;}
   }
   @media screen and (max-width: 1024px){
     .size-std{font-size: 1em;}
@@ -400,7 +400,64 @@ textarea,.frm-std{
 
 
 
+/* popup */
+.popup{
+	position: fixed;
+	top: 0; right: 0; left: 0; bottom: 0;
+	margin: auto;
+	width: 30%;
+	height: 35%;
+	background: #ffffff;
+	border-radius: 3px;
+	z-index: 1009;
+	display: none;
+}
+.popupContent{
+	width: 100%;
+	text-align: center;
+	position: relative;
+	top: 0;
+	height: 100%;
+}
+.popupBtn{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 10%;
+	text-align: center;
+  }
 
+.close-onbox{
+	position: absolute;
+	padding: 5px;
+	background-color:#FFF;
+	float:right;
+	top: 10px;
+	right: 10px;
+	border-radius:50%;
+	font-size:20px;
+	font-weight:600;
+	text-align:center;
+	border:1px solid #cacaca;
+	z-index: 1009;
+	cursor: pointer;
+}
+.close-onbox img{
+	width: 100%;
+    display: block;
+    vertical-align: middle;
+}
+/* end popup */
+
+.blur{
+	margin:auto; top:0; left:0; right:0; bottom:0;
+	width:100%;
+	height:100%;
+	background-color:rgba(0,0,0,0.5);
+	position:fixed;
+	z-index:1000;
+}
 
 
 
@@ -555,4 +612,39 @@ textarea,.frm-std{
         right: 11px;
         width: 58px;
     }
+}
+
+
+
+
+.numberofrows{
+    position: absolute;
+    left: 15px;
+    bottom: 10px;
+  }
+.pagination li{ 
+    background: transparent;
+    margin: 3px;
+    border-radius: 3px;
+    float: left;
+}
+.pagination li.active{
+  background: linear-gradient(to right, #0094D8, #00AFA2);
+  pointer-events: none;  
+}
+.pagination li.active a{
+  color: #ffffff;
+  font-weight: bold;
+}
+.pagination li:hover{
+  background: linear-gradient(to right, #0094D8, #00AFA2);
+}
+.pagination li:hover a{
+  color: #ffffff;
+}
+.pagination li a{
+  padding: 5px 10px;
+  color: #d5aa20;
+  display: block;
+  font-weight: bold;
 }
