--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,29 +17,29 @@
 	<div class="lSide">
 		<% include ./partials/sidebar %>
 	</div>
-	<div class="rSide desk">
+	<div class="rSide">
 		<div class="head gradientr desk">
 			<% include ./partials/topdesk %>
 		</div>
 		<div class="mainbox size-std column">
-			<div class="title-content size-std" style="background-color: #68baf9; width: 100%; padding: 10px 10px; margin: 10px 5px; color: #ffffff;">
+			<div class="title-content size-std">
 				DASHBOARD - <%= login.nameses+" - "+login.iddealer %>
 			</div>
 			<div class="top-info column">
 				<div class="containt top-info-box shadow half delay" style="background: #68baf9;">
 					<div class="size-std icon-info"><img src="<%= baseurl() %>images/icon/service.png"></div>
 					<div class="field-info">
-						<p class="nopad size-head4"><b>Anything to show</b></p>
-						<p class="size-head1 nopad">9999</p>
-						<p class="size-std nopad">Persons</p>
+						<p class="nopad size-head4"><b>Service Data</b></p>
+						<p class="size-head1 nopad"><%= countsrv %></p>
+						<p class="size-std nopad">Data</p>
 					</div>
 				</div>
 				<div class="containt top-info-box shadow half delay" style="background: #ff6d74;">
 					<div class="size-std icon-info"><img src="<%= baseurl() %>images/icon/delivery.png"></div>
 					<div class="field-info">
-						<p class="nopad size-head4"><b>Anything to show</b></p>
-						<p class="size-head1 nopad">100</p>
-						<p class="size-std nopad">Persons</p>
+						<p class="nopad size-head4"><b>Delivery Data</b></p>
+						<p class="size-head1 nopad"><%= countdlv %></p>
+						<p class="size-std nopad">Data</p>
 					</div>
 				</div>
 
@@ -114,6 +114,96 @@
 							</tr>
 						</table>
 					</div>
+					<div class="spccols-2 delay square btn-icon-big" style="background-color: #ffffff; border: 1px solid #d6d5d5; text-align: center;">
+						<table style="height: 100%; width: 100%; color: #959a9c;">
+							<tr>
+								<td>
+									<a href="<%= baseurl() %>service/Upload">
+										<img src="<%= baseurl() %>images/icon/phone-cati.png" alt="Upload Project" style="width: 55%; vertical-align: middle;">
+										<br><br>
+										<b>CATI</b>
+									</a>
+								</td>
+							</tr>
+						</table>
+					</div>
+				</div>
+			</div>
+			<div class="cols-12 column">
+				<div class="spccols-6">
+					<div style="width: 100%;" class="containt short-table">
+						<div class="headtitle trans">
+							<p class="nopad" style="padding: 5px 15px; position: relative;">
+								Recent Upload Service
+								<span class="dotted" style="background: green;"></span>
+							</p>
+							<ul class="tab-image-setting nopad">
+								<li><img src="<%= baseurl() %>images/icon/arrow-up.png" class="btn-tab-toggle delay" href="servicerecent"></li>
+								<li class="option-click" href="#servicerecent"><img src="<%= baseurl() %>images/icon/option-strip.png"></li>
+							</ul>
+						</div>
+						<div class="table-wrapper table-toggle servicerecent" style="width: 100%;">
+							<table class="size-std basic-tables spc-tb" style="width: 100%;" cellspacing="0" cellpadding="0">
+								<tr>
+									<th align="left">Type</th>
+									<th align="left">File Name</th>
+									<th align="right">Uplaod Date</th>
+								</tr>
+								<% 
+								for(srv of service){ 
+								if(srv.type_excelsrv==0){
+									var type = "DRAFT"
+								}else{
+									var type = "FIX"
+								}
+								%>
+									<tr>
+										<td>[<%= type %>]</td>
+										<td><a href="<%= baseurl() %>service/detail/<%= srv.id_excelsrv %>"><%= srv.filename_excelsrv %></a></td>
+										<td align="right"><%= moment(srv.upload_excelsrv).format("DD-MMM-YYYY") %></td>
+									</tr>
+									<% } %>
+							</table>
+						</div>
+					</div>
+				</div>
+
+				<div class="spccols-6">
+					<div style="width: 100%;" class="containt short-table">
+						<div class="headtitle trans">
+							<p class="nopad" style="padding: 5px 15px; position: relative;">
+								Recent Upload Delivery
+								<span class="dotted" style="background: green;"></span>
+							</p>
+							<ul class="tab-image-setting nopad">
+								<li><img src="<%= baseurl() %>images/icon/arrow-up.png" class="btn-tab-toggle delay" href="deliveryrecent"></li>
+								<li class="option-click" href="#deliveryrecent"><img src="<%= baseurl() %>images/icon/option-strip.png"></li>
+							</ul>
+						</div>
+						<div class="table-wrapper table-toggle deliveryrecent" style="width: 100%;">
+							<table class="size-std basic-tables spc-tb" style="width: 100%;" cellspacing="0" cellpadding="0">
+								<tr>
+									<th align="left">Type</th>
+									<th align="left">File Name</th>
+									<th align="right">Uplaod Date</th>
+								</tr>
+								<% 
+								for(dlv of delivery){ 
+									if(dlv.type_exceldlv==0){
+										var type = "DRAFT"
+									}else{
+										var type = "FIX"
+									}
+								%>
+								<tr>
+									<td><%= type %></td>
+									<td><a href="<%= baseurl() %>delivery/detail/<%= dlv.id_exceldlv %>"><%= dlv.filename_exceldlv %></a></td>
+									<td align="right"><%= moment(dlv.upload_exceldlv).format("DD-MMM-YYYY") %></td>
+								</tr>
+								<% } %>
+							</table>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -122,30 +212,31 @@
 </body>
 <% include ./partials/footer %>
 <script>
-	var yourData = [{
-		"value" : "2400",
-		"label" : "Jan"
-	},
-	{
-		"value" : "1800",
-		"label" : "Feb"
-	},
-	{
-		"value" : "788",
-		"label" : "Mar"
-	},
-	{
-		"value" : "877",
-		"label" : "Apr"
-	},
-	{
-		"value" : "1788",
-		"label" : "May"
-	},
-	{
-		"value" : "2500",
-		"label" : "Jun"
-	}];
+	// var yourData = [{
+	// 	"value" : "2400",
+	// 	"label" : "Jan"
+	// },
+	// {
+	// 	"value" : "1800",
+	// 	"label" : "Feb"
+	// },
+	// {
+	// 	"value" : "788",
+	// 	"label" : "Mar"
+	// },
+	// {
+	// 	"value" : "877",
+	// 	"label" : "Apr"
+	// },
+	// {
+	// 	"value" : "1788",
+	// 	"label" : "May"
+	// },
+	// {
+	// 	"value" : "2500",
+	// 	"label" : "Jun"
+	// }];
+	var yourData = <%- JSON.stringify(servicechart) %>
 </script>
 <script src="<% baseurl() %>js/chart.js" type="text/javascript"></script>
 </html>
