--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,5 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="<%= baseurl() %>js/angular/angular.js" type="text/javascript"></script>
 <script>
 $(document).ready(function(){
     $('.rSide .head').css({
