--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -6,12 +6,9 @@
         <li><a href="<%= baseurl() %>" class="size-std"><img src="<%= baseurl() %>images/icon/dashboard.png"> Dashboard</a></li>
         <li><a href="<%= baseurl() %>delivery" class="size-std"><img src="<%= baseurl() %>images/icon/upload-delivery.png">Delivery</a></li>
         <li><a href="<%= baseurl() %>service" class="size-std"><img src="<%= baseurl() %>images/icon/upload-service.png">Service</a></li>
-        <li><p class="nopad accord size-std" href="#user"><img src="<%= baseurl() %>images/icon/profile-blue.png">User</p>
-            <ul class="submenu size-std" id="user">
-                <li><a href="<%= baseurl() %>workflow/User">User</a></li>
-                <li><a href="<%= baseurl() %>workflow/team">Team</a></li>
-            </ul>
-        </li>
+        <% if(login.typeses=="admin" || login.typeses=="super"){ %>
+        <li><a href="<%= baseurl() %>service" class="size-std"><img src="<%= baseurl() %>images/icon/profile-blue.png">Service</a></li>
+        <% } %>
         <li><a href="<%= baseurl() %>logout" class="size-std"><img src="<%= baseurl() %>images/icon/logout-blue.png">Logout</a></li>
     </ul>
 </div>
