--- a/views/detailservice.ejs
+++ b/views/detailservice.ejs
@@ -198,19 +198,38 @@
 					<div class="size-std numberofrows">
                         <ul class="pagination nopad">
                             <% 
-                            for(var i=1;i<=count;i++){ 
-                                if(page==i){
+                            if(count>7){
+                                var pagelength = 7
+                            }else{
+                                var pagelength = count
+                            }
+                            var len = arrpage.length
+                            var lastarray = arrpage[6]+1
+                            for(var i=0;i < arrpage.length;i++){ 
+                                if(page==arrpage[i]){
                                     var classes = "active"
                                 }else{
                                     var classes = ""
                                 }
                                 if(page==0){
-                                    if(i==1){
+                                    if(arrpage[i]==1){
                                         var classes = "active"
                                     }
                                 }
                             %>
-                                <li class="<%= classes %>"><a href="<%= baseurl() %>service/detail/<%= files[0].id_excelsrv%>?page=<%= i %>"><%= i %></a></li>
+                                <li class="<%= classes %>"><a href="<%= baseurl() %>service/detail/<%= files[0].id_excelsrv%>?page=<%= arrpage[i] %>"><%= arrpage[i] %></a></li>
+                            <% } %>
+                            <% if(page<=count-5){ %>
+                                <li class="<%= classes %>"><a href="<%= baseurl() %>service/detail/<%= files[0].id_excelsrv%>?page=<%= lastarray %>">...</a></li>
+                            <% } %> 
+                            <% if(count>7){ 
+                                if(count==page){
+                                    var lastclass = "active"
+                                }else{
+                                    var lastclass = ""
+                                }
+                            %>
+                            <li class="<%= lastclass %>"><a href="<%= baseurl() %>service/detail/<%= files[0].id_excelsrv%>?page=<%= count %>"><%= count %></a></li>
                             <% } %>
                         </ul>
                     </div>
